# DirectClaude

./: .gitignore  CLAUDE.md  SKILL.md  TFL_CONNECT_2_H573.ioc  eg915n_hw.txt  main.h  run_claude.bat  run_claude.py  skill_loader.py
.ccorebridge/: runs.jsonl
.ccorebridge/runs/: r_02345528a7ab.jsonl  r_10d62b6823df.jsonl  r_195285d678d6.jsonl  r_1e6303391229.jsonl  r_1f09e2dc4048.jsonl  r_2b168cb531ea.jsonl  r_32d127b424e0.jsonl  r_338222f8e8ce.jsonl  r_33a22a34694f.jsonl  r_4537fb5a03b9.jsonl  r_4edeb6f8be1e.jsonl  r_52a72b78d8b8.jsonl  r_5d3b42094de9.jsonl  r_5eae217a7f58.jsonl  r_605500a229d9.jsonl  r_62727f41bd31.jsonl  r_6d3130d92801.jsonl  r_6e9aabc61396.jsonl  r_7e7272e9df6a.jsonl  r_85d6cf1ad2a6.jsonl  r_86381950aedc.jsonl  r_8db662cc1458.jsonl  r_a8a31838e6a8.jsonl  r_ad74a5329d9c.jsonl  r_b17d6a3e953a.jsonl  r_c168096afcc6.jsonl  r_c3dd1a0388e3.jsonl  r_ca2425e0dd73.jsonl  r_d6ac7a273241.jsonl  r_ec556b764dee.jsonl  r_eeb3709f9e59.jsonl  r_fd1e2486fe30.jsonl
.claude/: settings.local.json
LowLevel/: .mxproject  CMakeLists.txt  STM32H573xx_FLASH.ld  STM32H573xx_RAM.ld
LowLevel/Core/Inc/: gpdma.h  main.h
LowLevel/Core/Src/: fdcan.c  gpdma.c  main.c  rtc.c  spi.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  tim.c  usart.c
LowLevel/cmake/stm32cubemx/: CMakeLists.txt
ST_IOT/: TFL_CONNECT_2_H573.ioc
ST_IOT/Core/Inc/: stm32h5xx_hal_conf.h  stm32h5xx_it.h  usart.h
ST_IOT/Core/Src/: adc.c  gpio.c  i2c.c  iwdg.c  stm32h5xx_hal_msp.c  syscalls.c  sysmem.c
ST_IOT/Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_gcc.h
ST_IOT/Drivers/STM32H5xx_HAL_Driver/Inc/: stm32h5xx_hal_rtc_ex.h
ST_IOT/Drivers/STM32H5xx_HAL_Driver/Src/: stm32h5xx_hal_rtc_ex.c
ST_IOT/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
UI/: ARCHITECTURE.md  CCoreAi.html
UI/.claude/: settings.local.json
UI/ccorebridge/: README.md  pyproject.toml
UI/ccorebridge/ccorebridge/: __init__.py  __main__.py  auth.py  confirm.py  projects.py  runner.py  server.py
UI/ccorebridge/ccorebridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
UI/ccorebridge/ccorebridge/static/: CCoreAi.html  bridge.js  styles.css
UI/ccorebridge/ccorebridge/static/components/: Login.jsx  ProjectSelector.jsx  ProjectWorkspace.jsx
UI/components/: Icons.jsx  Login.jsx  ProjectSelector.jsx  ProjectWorkspace.jsx  data.jsx
c-embedded/: SKILL.md
c-embedded/devices/: 66-67WVS16M8FALL-BLL.md  Quectel_FC41D_AT_Commands_Manual_V2.0.md  lsm6dso.md
cmake/: self_test_template.c  self_test_template.h
projects/01-blink/: CMakeLists.txt  CMakePresets.json  STATE.md
projects/01-blink/Core/Inc/: main.h  self_test.h  stm32h5xx_hal_conf.h
projects/01-blink/Core/Src/: main.c  self_test.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
projects/02-uart7-echo/: CLAUDE.md  CMakeLists.txt  STATE.md
projects/02-uart7-echo/Core/Inc/: main.h  stm32h5xx_hal_conf.h
projects/02-uart7-echo/Core/Src/: main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
projects/03-gsensor/: CLAUDE.md  CMakeLists.txt  CONTEXT.md  STATE.md
projects/03-gsensor/Core/Inc/: lsm6dso.h  main.h  stm32h5xx_hal_conf.h
projects/03-gsensor/Core/Src/: calibration.c  lsm6dso.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
projects/04-gsensor/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/04-gsensor/.claude/: settings.json
projects/04-gsensor/Core/Inc/: calibration.h  lsm6dso.h  main.h
projects/04-gsensor/Core/Src/: lsm6dso.c  main.c  spi.c  stm32h5xx_it.c
projects/05-psram/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/05-psram/Core/Inc/: main.h  psram.h
projects/05-psram/Core/Src/: main.c  psram.c  spi.c  stm32h5xx_it.c
projects/05-psram/cmake/: arm-none-eabi.cmake
projects/07-dual-blink/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/07-dual-blink/Core/Inc/: main.h
projects/07-dual-blink/Core/Src/: gpio.c  main.c  stm32h5xx_it.c
projects/09-sms-modem/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/09-sms-modem/Core/Inc/: main.h  modem.h
projects/09-sms-modem/Core/Src/: main.c  modem.c  stm32h5xx_it.c
projects/09-sms-modem/cmake/: arm-none-eabi.cmake
projects/09-sms-modem/tools/: send_sms_test.py
projects/10-modem-socket/: CMakeLists.txt  CMakePresets.json  STATE.md
projects/10-modem-socket/Core/Inc/: main.h  modem.h
projects/10-modem-socket/Core/Src/: main.c  modem.c  ring_buf.c  stm32h5xx_it.c  system_stm32h5xx.c
projects/11-adc-check/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/11-adc-check/Core/Inc/: main.h
projects/11-adc-check/Core/Src/: main.c  stm32h5xx_it.c
projects/12-ble-detect/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/12-ble-detect/Core/Inc/: fc41d.h
projects/12-ble-detect/Core/Src/: fc41d.c  main.c  stm32h5xx_it.c
projects/12-ignition-status/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/12-ignition-status/Core/Inc/: main.h
projects/12-ignition-status/Core/Src/: main.c  stm32h5xx_it.c
projects/13-wifi-scan/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/13-wifi-scan/Core/Inc/: fc41d.h
projects/13-wifi-scan/Core/Src/: fc41d.c  main.c  stm32h5xx_it.c
projects/14-ignition-rg/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/15-ble-scan/: CMakeLists.txt  CONTEXT.md  STATE.md
projects/16-ble-beacon/: CMakeLists.txt  CMakePresets.json  CONTEXT.md  STATE.md
projects/16-ignition-led/: CMakeLists.txt  STATE.md
projects/ThreadX/: CMakeLists.txt  CMakePresets.json  CONTEXT.md  STATE.md
projects/ThreadX/Core/Inc/: app_threadx.h  main.h  stm32h5xx_hal_conf.h  tx_user.h
projects/ThreadX/Core/Src/: app_threadx.c  main.c  stm32h5xx_hal_msp.c  tx_initialize_low_level.S
projects/ThreadX/scripts/: trace_read.py
skills/embedded-general/coding/: SKILL.md
skills/embedded-general/testing/: SKILL.md
skills/modem/eg915n/: SKILL.md
skills/project-tfl/architecture/: SKILL.md
skills/project-tfl/coding/: SKILL.md
skills/project-tfl/testing/: SKILL.md
skills/stm32/architecture/: SKILL.md
skills/stm32/coding/: SKILL.md
skills/stm32/testing/: SKILL.md
skills/stm32/threadx/: SKILL.md
skills/wifi-ble/fc41d/: SKILL.md
(+14 files in other folders)
